--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3-slim
 EXPOSE 8000
 
 RUN mkdir -p /opt/family-tools
-COPY .. /opt/family-tools
+COPY . /opt/family-tools
 
 WORKDIR /opt/family-tools
 
