--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,12 +4,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@master
-      with:
-        registry: docker.pkg.github.com
-        name: docker.pkg.github.com/cupracer/family-tools/family-tools
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PKG_GITHUB_TOKEN }}
-        dockerfile: Dockerfile
+      - uses: actions/checkout@v4
+      - name: Publish to Registry
+        uses: elgohr/Publish-Docker-Github-Action@v5.5.0
+        with:
+          registry: docker.pkg.github.com
+          name: docker.pkg.github.com/cupracer/family-tools/family-tools
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PKG_GITHUB_TOKEN }}
+          dockerfile: Dockerfile
+          platforms: linux/amd64,linux/arm64
