--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,4 @@ python-dateutil==2.8.1
 simplejson==3.17.2
 djangorestframework-guardian==0.3.0
 todoist-python==8.1.2
-setuptools!=50.0
+setuptools==69.1.0
